# smith_waterman

./: CMakeLists.txt  Makefile  README.md  dna.seq  gen.py  main  main.cpp
include/: aux.hpp
libs/aux/: aux.cpp
src/: smith_waterman.cpp
